添加node.js express模板支持

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,7 @@
+#2014-4-20 22:48:53
+1. 改进escapeInFuction,防止换行多出错
+1. 支持node.js express
+-----------------------------
 #2014-4-18 17:25:23
 1. 完善文档
 2. 发布到github
