--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,7 @@
+#2014-4-22 20:16:07
+1. 增加@each(item in items)模板写法,详见doc/template.md
+
+------------------------------------
 #2014-4-20 22:48:53
 1. 改进escapeInFuction,防止换行多出错
 1. 支持node.js express
@@ -7,7 +11,6 @@
 2. 发布到github
 -------------------------------
 #2014-4-17
-##Add
 1. 增加对html的转义
 
 	使用@(- data)来转义
@@ -22,6 +25,5 @@
 
 ----------------------------
 #2014-4-16 23:39:35
-##Fix
 1. 解决在@for()中使用比较运算符`< > &`被html编码成`&lt; &gt; &amp;`而导致出错的问题
 2. 解决loop在@if(){ } else{ }中正则匹配出错的问题,改进方法:1.只使用正则test,获取{位置交给getSecondBrace方法
