--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,11 @@
+-----------------------------
+#2014-5-4 16:28:48
+1. 重构jquery相关写法
+2. 删除不易使用renderInParent方法
+3. 使用razor-each 来 代替razor-repeat
+4. jq相关方法,只有一个render(ViewBag),会自动判断是script模板还是div模板
+    如果是div模板,会使它show出来
+----------------------
 #2014-4-22 20:16:07
 1. 增加@each(item in items)模板写法,详见doc/template.md
 
