fix comment bug

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,8 @@
 -----------------------------
+#2014-5-18 15:24:02
+1. 修复@* *@注释中含@符号时,解析出错
+2. 上一条是bug,应该是symbol+*,例如symbol("~") ~* *~表示注释
+-----------------------------
 #2014-5-4 16:28:48
 1. 重构jquery相关写法
 2. 删除不易使用renderInParent方法
