添加多else支持

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,38 @@
+# 2014-7-17 11:18:04
+添加多else结构
+```
+<script type="text/template" id="test">
+    @each(person in ViewBag.persons){
+        <div ">
+            @if(person.age > 30){
+                这么大了啊~
+            }
+            else if(person.age > 18)
+            {
+                哎哟,不错哟,成年了
+            }
+            else
+            {
+                小屁孩,哈哈
+            }
+        </div>
+    }
+</script>
+```
+
+
+去掉精简模板功能,保留原来的结构,因为时不时少个空格,
+分级
+js注释/razor注释/html注释
+空白/换行
+###还没实现
+|模式		  |做什么
+|-|-|
+|`debug`	|输出调试信息,如模板哪一行出问题、输出map,如windjs
+|`none`		|什么都不做,只替换模板内容|
+|`noraml`	|只去除razor注释 @* *@ ，作为默认模式
+|`compress`	|去除所有注释,去除空行,压缩空格
+
 #2014-6-8 11:16:37
 1. 去掉enableEmptyValue
 2. 增加razor.withViewBag配置,可以不写ViewBag了,等同于@(=变量),前面是将ViewBag中的变量在函数里面定义一遍,后边是@(=var)在var前面添加ViewBag.
