--- a/更新日志.md
+++ b/更新日志.md
@@ -3,7 +3,7 @@
 ```
 <script type="text/template" id="test">
     @each(person in ViewBag.persons){
-        <div ">
+        <div>
             @if(person.age > 30){
                 这么大了啊~
             }
